[gd_scene load_steps=6 format=3 uid="uid://cn86xx3dsp5xh"]

[ext_resource type="Script" uid="uid://bglej1bmoo81s" path="res://scenes/relic_handler/relic_handler.gd" id="1_4mcmm"]
[ext_resource type="Texture2D" uid="uid://313csfw3voyr" path="res://art/arrow_small.png" id="1_ivcrv"]
[ext_resource type="Texture2D" uid="uid://7eek2jxk3xu8" path="res://art/arrow_small_disabled.png" id="2_f73p0"]
[ext_resource type="PackedScene" uid="uid://bcvago2tfakr0" path="res://scenes/relic_handler/relic_ui.tscn" id="3_4mcmm"]
[ext_resource type="Script" uid="uid://djrv35smje47f" path="res://scenes/relic_handler/relics_control.gd" id="3_f73p0"]

[node name="RelicHandler" type="HBoxContainer"]
offset_right = 120.0
offset_bottom = 16.0
theme_override_constants/separation = 4
script = ExtResource("1_4mcmm")

[node name="LeftButton" type="TextureButton" parent="."]
unique_name_in_owner = true
layout_mode = 2
disabled = true
texture_normal = ExtResource("1_ivcrv")
texture_pressed = ExtResource("1_ivcrv")
texture_hover = ExtResource("1_ivcrv")
texture_disabled = ExtResource("2_f73p0")
stretch_mode = 5
flip_h = true

[node name="RelicsControl" type="Control" parent="."]
clip_contents = true
custom_minimum_size = Vector2(88, 0)
layout_mode = 2
script = ExtResource("3_f73p0")

[node name="Relics" type="HBoxContainer" parent="RelicsControl"]
unique_name_in_owner = true
custom_minimum_size = Vector2(88, 16)
layout_mode = 0
offset_right = 136.0
offset_bottom = 16.0
theme_override_constants/separation = 2

[node name="RelicUI" parent="RelicsControl/Relics" instance=ExtResource("3_4mcmm")]
layout_mode = 2

[node name="RelicUI2" parent="RelicsControl/Relics" instance=ExtResource("3_4mcmm")]
layout_mode = 2

[node name="RelicUI3" parent="RelicsControl/Relics" instance=ExtResource("3_4mcmm")]
layout_mode = 2

[node name="RelicUI4" parent="RelicsControl/Relics" instance=ExtResource("3_4mcmm")]
layout_mode = 2

[node name="RelicUI5" parent="RelicsControl/Relics" instance=ExtResource("3_4mcmm")]
layout_mode = 2

[node name="RelicUI6" parent="RelicsControl/Relics" instance=ExtResource("3_4mcmm")]
layout_mode = 2

[node name="RelicUI7" parent="RelicsControl/Relics" instance=ExtResource("3_4mcmm")]
layout_mode = 2

[node name="RelicUI8" parent="RelicsControl/Relics" instance=ExtResource("3_4mcmm")]
layout_mode = 2

[node name="RelicUI9" parent="RelicsControl/Relics" instance=ExtResource("3_4mcmm")]
layout_mode = 2

[node name="RelicUI10" parent="RelicsControl/Relics" instance=ExtResource("3_4mcmm")]
layout_mode = 2

[node name="RelicUI11" parent="RelicsControl/Relics" instance=ExtResource("3_4mcmm")]
layout_mode = 2

[node name="RelicUI12" parent="RelicsControl/Relics" instance=ExtResource("3_4mcmm")]
layout_mode = 2

[node name="RightButton" type="TextureButton" parent="."]
unique_name_in_owner = true
layout_mode = 2
disabled = true
texture_normal = ExtResource("1_ivcrv")
texture_pressed = ExtResource("1_ivcrv")
texture_hover = ExtResource("1_ivcrv")
texture_disabled = ExtResource("2_f73p0")
stretch_mode = 5
